<resources>
    <string name="app_name">BudgetPlanner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="auth_sign_up_username_len_err">The username must be greater than 8 or equal to 30</string>
    <string name="auth_sign_up_username_email_err">Please enter a valid email address</string>
    <string name="auth_sign_up_username_invalid_err">Invalid username</string>
    <string name="auth_sign_up_password_len_err">The password must be greater than 8 or equal to 22</string>
    <string name="auth_sign_up_password_special_char_err">The password must have at least one special character</string>
    <string name="auth_sign_up_password_alphabetic_char_err">The password must have at least one alphabetic character</string>
    <string name="auth_sign_up_confirm_password_err">Passwords do not match</string>
    <string name="auth_sign_up_sign_in_button">sign in</string>
    <string name="auth_sing_up_title">Create your \naccount</string>
    <string name="auth_sign_up_username_hint">Enter your email</string>
    <string name="auth_sing_up_password_hint">Enter your password</string>
    <string name="auth_sign_up_confirm_password_hint">Confirm password</string>
    <string name="auth_sign_up_continue_button">continue</string>

    <string name="auth_onboarding_step_one_title">Let’s get you\nstarted</string>

    <string name="auth_onboarding_last_name_hint">Last name</string>
    <string name="auth_onboarding_first_name_hint">First name</string>
    <string name="auth_onboarding_step_one_text">Step 1 of 2</string>
    <string name="auth_onboarding_next_button">next</string>
    <string name="auth_onboarding_step_one_first_name_len_err">The First name must be greater than 3 or equal to 22</string>
    <string name="auth_onboarding_step_one_first_name_alpha_err">First name should contain only alpha characters</string>
    <string name="auth_onboarding_step_one_last_name_len_err">The Last name must be greater than 3 or equal to 22</string>
    <string name="auth_onboarding_step_one_last_name_alpha_err">Last name should contain only alpha characters</string>

    <string name="auth_onboarding_step_two_initial_balance_invalid_err">Initial Amount is invalid</string>

    <string name="network_no_server_conn_err">"No connection to the server!"</string>
    <string name="network_unknown_err">"Something went wrong!"</string>

    <string name="auth_sign_in_invalid_credentials_err">Entered credentials are invalid!</string>
    <string name="auth_sign_in_username_hint">Email</string>
    <string name="auth_sing_in_password_hint">Password</string>
    <string name="auth_sign_in_auth_request_timed_out_err">The request has timed out.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_sign_in_button">sign in</string>
    <string name="auth_sign_in_title">Acces your\naccount</string>
    <string name="auth_sign_in_sign_up_button">sign up</string>
    <string name="auth_welcome_title">Welcome!</string>
    <string name="auth_welcome_text">Welcome to the Budget Planner. Use the \"Sign In\" button below to start planning your budget</string>
    <string name="auth_welcome_sign_in_button">sign in</string>

    <string name="auth_sign_in_failed_auth_dialog_action_button">Got it!</string>
    <string name="auth_dialog_title">Authentication Failed!</string>
    <string name="auth_logout_dialog_title">Sign out Failed!</string>
    <string name="auth_dialog_got_it_button">Got it!</string>
    <string name="loading_request_dialog_title">Please wait...</string>
    <string name="loading_request_dialog_info_text">Your request is being processed.</string>

    <string name="error_general">Error</string>
    <string name="error_unknown">Unknown error</string>

    <string name="general_expenses_title">Expenses</string>
    <string name="general_income_title">Income</string>
    <string name="dashboard_my_balance_title">Total amount</string>
    <string name="dashboard_sing_out_button">Sign out</string>

    <string name="dashboard_transaction_expense_empty_title">You haven’t added any expenses\nfor this month yet.</string>
    <string name="dashboard_transaction_income_empty_title">You haven’t added any income\nfor this month yet.</string>
    <string name="add_transaction_expense_success_message_prefix">A new Expense of</string>
    <string name="add_transaction_income_success_message_prefix">A new Income of</string>
    <string name="add_transaction_success_message_suffix">has been added.</string>

    <string name="add_transaction_success_dialog_title">Success</string>

    <string name="add_transaction_category_error">The transaction should have a category selected.</string>
    <string name="add_transaction_date_error">The date can not be empty.</string>

    <string name="add_transaction_title_less_then_minimum_len_error">The title can not be less than 5 characters long.</string>
    <string name="add_transaction_title_more_then_max_len_error">The title can not be more than 25 characters long.</string>
    <string name="add_transaction_title_more_only_alpha_char_error">The title should contain only alpha characters.</string>

    <string name="add_transaction_amount_less_then_permitted_error">The amount can not be less than 1.00.</string>
    <string name="add_transaction_amount_too_much_money_error">Woaah, too much money! Please spend something!</string>
    <string name="add_transaction_amount_more_than_available_error">The amount can not be greater than the currently available amount of</string>

    <string name="add_transaction_date_picker_title">Pick a transaction date</string>

    <string name="dashboard_balance_less_than_one_thousand_title">Less than 1k</string>
    <string name="dashboard_balance_one_thousand_title">1k</string>
    <string name="dashboard_balance_less_than_five_thousand_title">Less than 5k</string>
    <string name="dashboard_balance_five_thousand_title">5k</string>
    <string name="dashboard_balance_more_than_five_thousand_title">More than 5k</string>

    <string name="success_delete_dialog_title">Operation succeed.</string>
    <string name="success_delete_dialog_message">Transaction removed. Budget stats updated.</string>
    <string name="success_delete_dialog_button">Close</string>

    <string name="yes_no_dialog_title">Are you sure?</string>
    <string name="yes_no_dialog_message">Once you delete it, it\'s gone forever.</string>
    <string name="yes_no_dialog_yes_button">Yes</string>
    <string name="yes_no_dialog_no_button">No</string>


</resources>
